<resources>
    <string name="app_name">Domenator</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войдите в свой аккаунт</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="invalid_email">Недействительный email</string>
    <string name="invalid_password">Пароль должен быть &gt;5 символов</string>
    <string name="login_failed">"Ошибка входа"</string>
    <string name="main_mid_text">Чтобы начать добавлять данные о затраченном топливе, нажмите кнопку “Начать отчет”</string>
    <string name="start_report">Начать отчет</string>
    <string name="finish_report">Завершить Отчет</string>
    <string name="sign_in_into_your_account">Войдите в свой аккаунт</string>
    <string name="select_app_language">Выберите язык приложения</string>
    <string name="photos">Фотографии</string>
    <string name="documents">Документы</string>
    <string name="todo">Список задач</string>
    <string name="save">Сохранить</string>
    <string name="title_activity_nav">АктивностьНавигации</string>
    <string name="navigation_drawer_open">Открыть панель навигации</string>
    <string name="navigation_drawer_close">Закрыть панель навигации</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Заголовок навигации</string>
    <string name="action_settings">Настройки</string>
    <string name="menu_home">Домой</string>
    <string name="menu_gallery">Галерея</string>
    <string name="menu_slideshow">Слайд-шоу</string>
    <string name="view_more">Показать больше</string>
    <string name="tap_to_see_more">Нажмите, чтобы увидеть больше</string>
    <string name="title">Заголовок</string>
    <string name="km_title">002569 км</string>
    <string name="title_date">01.01.2023</string>
    <string name="no_records_yet">У вас пока нет записей. Нажмите “+”, чтобы добавить данные о топливе </string>
    <string name="you_didn_t_add_any_photos_yet_press_button_to_add_them">Вы еще не добавили ни одной фотографии, нажмите кнопку 📷, чтобы добавить их</string>
    <string name="user_profile">Личный кабинет</string>
    <string name="car_acceptance">Приемка автомобиля</string>
    <string name="driver_regulations">Регламент водителя</string>
    <string name="driver_help">Помощь водителям</string>
    <string name="logout">Выйти</string>
    <string name="licence_plate_nr">Номер машины</string>
    <string name="speedometer_value">Показатели спидометра</string>
    <string name="pick_date">Выбрать дату</string>
    <string name="date">Дата</string>
    <string name="fuel_quantity">Количество топлива</string>
    <string name="fuel_price">Цена топлива</string>
    <string name="change">Изменить</string>
    <string name="select_picture">Выбрать изображение</string>
    <string name="you_have_not_picked_image">Вы не выбрали изображение</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="are_you_sure_you_want_to_delete_this_image">Вы уверены, что хотите удалить это изображение?</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отменить</string>
    <string name="add">Добавить</string>
    <string name="please_fill_in_all_fields">Заполните все поля</string>
    <string name="add_report_info">Добавте информацию об отчете</string>
    <string name="add_car_info">Добавте информацию об автомобиле</string>
    <string name="car_reception">Прием машины</string>
    <string name="domenator_business_name">DOMENATOR SP. Z O.O</string>
    <string name="edit">Редактировать</string>
    <string name="you_dont_have_notifications">У вас нет уведомлений</string>

    <string name="dlg_no_internet_connection_message">Проверьте подключение к Интернету и повторите попытку.</string>
    <string name="dlg_no_internet_connection_title">Нет подключения к интернету</string>
    <string name="dlg_no_internet_connection_try_again_button">Повторить попытку</string>
</resources>