<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group_navs" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/user_profile" />

        <item
            android:id="@+id/nav_car_acceptance"
            android:icon="@drawable/baseline_airport_shuttle_24"
            android:title="@string/car_acceptance" />

        <item
            android:id="@+id/nav_driver_regulations"
            android:icon="@drawable/baseline_assignment_24"
            android:title="@string/driver_regulations" />

        <item
            android:id="@+id/nav_driver_help"
            android:icon="@drawable/baseline_help_outline_24"
            android:title="@string/driver_help" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout" />
    </group>
</menu>