<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activityReportMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <LinearLayout
        android:background="@color/primary_white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/LL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_color"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/top_bar_height"
                android:layout_marginHorizontal="@dimen/top_bar_margin_horizontal"
                android:layout_marginTop="35dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/leftButton"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@color/transparent"
                    android:src="@drawable/menu_left" />

                <ImageButton
                    android:id="@+id/rightButton"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="end"
                    android:background="@color/transparent"
                    android:src="@drawable/menu_right" />
            </RelativeLayout>

            <TextView
                android:id="@+id/title"
                style="@style/TitleTextStyle"
                android:text="@string/title" />

            <LinearLayout
                android:layout_marginBottom="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_km" />

                    <TextView
                        android:id="@+id/titleKm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/km_title"
                        android:textColor="@color/white"
                        android:textSize="@dimen/s_txt_size" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="28dp"
                    android:gravity="center">


                    <TextView
                        android:id="@+id/titleDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_date"
                        android:textColor="@color/white"
                        android:textSize="@dimen/s_txt_size">


                    </TextView>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_calendar" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reportRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_title_horizontal"
            android:layout_marginTop="50dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>

    <!-- Custom Button for "Finish Report" -->
    <LinearLayout
        android:id="@+id/reportMidLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:layout_anchor="@id/LL1"
        app:layout_anchorGravity="bottom|center">

        <Button
            style="@style/MainBtnStyle"
            android:text="@string/finish_report" />
    </LinearLayout>

    <!-- Standard FloatingActionButton -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/standardFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/primary_color"
        android:src="@drawable/ic_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>