<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".md.webmasterstudio.domenator.activities.CarReceptionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/LL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_color"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/top_bar_margin_horizontal"
                android:layout_marginTop="35dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/leftButton"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@color/transparent"
                    android:src="@drawable/back_arrow" />

                <ImageButton
                    android:id="@+id/rightButton"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="end"
                    android:background="@color/transparent"
                    android:src="@drawable/menu_right" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="@dimen/margin_title_top"
                android:text="Car reception"
                android:textColor="@color/white"
                android:textSize="@dimen/m_txt_size">


            </TextView>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="@dimen/margin_title_top"
                android:layout_marginBottom="-1dp"
                android:checkedButton="@id/radioBtnPhotos"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioBtnPhotos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/radio_button"
                    android:button="@color/transparent"
                    android:text="@string/photos"
                    android:textAlignment="center"
                    android:textColor="@drawable/radio_text_color_selector"
                    android:textSize="@dimen/ms_txt_size" />

                <RadioButton
                    android:id="@+id/radioBtnDocuments"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/radio_button"
                    android:button="@color/transparent"
                    android:text="@string/documents"
                    android:textAlignment="center"
                    android:textColor="@drawable/radio_text_color_selector"
                    android:textSize="@dimen/ms_txt_size" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="25dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4"
                tools:itemCount="12"
                tools:listitem="@layout/image_item" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/primary_white"
        android:text="@string/save"
        android:textColor="@color/main_text_color"
        android:textSize="@dimen/ms_txt_size" />

    <!-- Standard FloatingActionButton -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/standardFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/primary_color"
        android:src="@drawable/camera" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>